# oenv

./: .envrc  .gitignore  .ocamlformat  LICENSE  README.md  dune  dune-project  flake.nix  index.mld  odoc-config.sexp  oenv.opam
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  update-flake-lock.yml
examples/: basic.ml  config.ml  dune  let.ml
oenv/: dune  errors.ml  logging.ml  oenv.ml  oenv.mli  product.ml  product.mli  shapes.ml  std.ml  std.mli
test/: dune  test.ml  test_log.expected  test_log.ml
